# app/Http/ApiControllers/GenreController.php
@@ -10,6 +10,25 @@ use Illuminate\Http\Request;
 class GenreController extends Controller
 {
 
+    /**
+     * @OA\Get (
+     *     path="/genres",
+     *     operationId="genresGet",
+     *     tags={"Genres"},
+     *     summary="Get genres",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Genres list",
+     *         @OA\JsonContent(ref="#/components/schemas/GenresResource")
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Error",
+     *         @OA\JsonContent(ref="#/components/schemas/DefaultErrorResource")
+     *     )
+     * )
+     *
+     **/
     public function index()
     {
         return response()->success(
@@ -22,11 +41,28 @@ class GenreController extends Controller
         //
     }
 
+    /**
+     * @OA\Get (
+     *     path="/genres/{id}",
+     *     operationId="genreGet",
+     *     tags={"Genres"},
+     *     summary="Get genre",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Genre",
+     *         @OA\JsonContent(ref="#/components/schemas/GenreResource")
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Error",
+     *         @OA\JsonContent(ref="#/components/schemas/DefaultErrorResource")
+     *     )
+     * )
+     *
+     **/
     public function show(Genre $genre)
     {
-        return response()->success(
-            new GenreResource($genre)
-        );
+        return response()->success(new GenreResource($genre));
     }
 
     public function update(Request $request, Genre $genre)
